--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,5 +1,8 @@
 def label = "jenkins-slave-${UUID.randomUUID().toString()}"
 def COMMIT_HEAD_TAG = ""
+def DEVELOP_IMAGE_TAG = "test"
+def RELEASE_IMAGE_TAG = "release"
+def TAG_FILTER="prod"
 
 podTemplate(
     label: label,
@@ -10,7 +13,7 @@ podTemplate(
         containerTemplate(name: 'helm', image: 'docker-registry.default.svc:5000/openshift/helm:2.14.0', ttyEnabled: true, command: 'cat'),
         containerTemplate(name: 'openshift', image: 'docker-registry.default.svc:5000/openshift/openshift-cli', ttyEnabled: true, command: 'cat'),
         containerTemplate(name: 'docker', image: 'docker', ttyEnabled: true, command: 'cat'),
-		containerTemplate(name: 'ruby', image: 'ruby:2.5.5', ttyEnabled: true, command: 'cat')
+        containerTemplate(name: 'ruby', image: 'ruby:2.5.5', ttyEnabled: true, command: 'cat')
 
     
     ]
@@ -37,7 +40,7 @@ podTemplate(
                     echo 'Execute on Develop'
                 } else if (env.BRANCH_NAME == 'release'){
                     echo 'Execute on Release'
-                } else if (env.BRANCH_NAME.contains('prod') && COMMIT_HEAD_TAG.contains('prod')){
+                } else if (env.BRANCH_NAME.contains(TAG_FILTER) && COMMIT_HEAD_TAG.contains(TAG_FILTER)){
                     echo 'Execute on "prod" specific tag.'
                 }
                 else {
@@ -56,7 +59,7 @@ podTemplate(
                 } else if (env.BRANCH_NAME == 'release'){
                     echo 'Execute Unit Tests'
                     sh 'ruby -v'
-                } else if (env.BRANCH_NAME.contains('prod') && COMMIT_HEAD_TAG.contains('prod')){
+                } else if (env.BRANCH_NAME.contains(TAG_FILTER) && COMMIT_HEAD_TAG.contains(TAG_FILTER)){
                     echo 'No Unit Test'
                 }
                 else {
@@ -74,7 +77,7 @@ podTemplate(
                     echo 'No Checkmarx'
                 } else if (env.BRANCH_NAME == 'release'){
                     echo 'Execute Checkmarx'
-                } else if (env.BRANCH_NAME.contains('prod') && COMMIT_HEAD_TAG.contains('prod')){
+                } else if (env.BRANCH_NAME.contains(TAG_FILTER) && COMMIT_HEAD_TAG.contains(TAG_FILTER)){
                     echo 'No Checkmarx'
                 }
                 else {
@@ -96,9 +99,11 @@ podTemplate(
                     echo 'No Build'
                 } else if (env.BRANCH_NAME == 'develop'){
                     echo 'Build on Develop'
+                    echo 'Image Tag:' + DEVELOP_IMAGE_TAG
                     sh 'oc whoami'
                 } else if (env.BRANCH_NAME == 'release'){
                     echo 'Build on Release'
+                    echo 'Image Tag:' + RELEASE_IMAGE_TAG
                     sh 'oc whoami'
                 } else if (env.BRANCH_NAME.contains('prod') && COMMIT_HEAD_TAG.contains('prod')){
                     echo 'No Build'
@@ -110,66 +115,31 @@ podTemplate(
                 }
             }
         }
+        stage('Deploy Image') {
+            container('helm') {
+                if (env.BRANCH_NAME == 'master') {
+                    echo 'Master Deploy'
 
-
-        // stage('Unit Test') {
-        //     container('ruby') {
-        //         echo 'Branch:'
-        //         echo env.BRANCH_NAME
-        //         echo 'Tag:'
-                
-        //         echo 'Start Branch Decision'
-        //         if (env.BRANCH_NAME == 'master') {
-        //             echo 'Execute Unit Tests on Master'
-        //         } else if (env.BRANCH_NAME == 'develop'){
-        //             echo 'Execute Unit Tests on Develop'
-        //             sh 'ruby -v'
-
-        //         } else if (env.BRANCH_NAME == ''){
-        //             echo 'Execute Unit on Tag?'
-        //             sh 'ruby -v'
-
-        //         } else {
-        //             echo 'I execute elsewhere'
-        //         }
-                
-        //     }
-        // }
-		
-        // stage('OC Build Image') {
-        //     container('openshift') {
-        //         sh 'oc whoami'
-        //     }
-        // }
-		
-        // stage('package charts') {
-        //     container('helm') {
-        //         sh 'helm help'
-        //     }
-        // }
-    	
-        // stage('Deploy') {
-        //     echo env.GIT_TAG_NAME
-        //     if (env.BRANCH_NAME == 'master') {
-        //         echo 'I only execute on the master branch'
-                
-                
-
-        //     } else if (env.BRANCH_NAME == 'develop'){
-        //         echo 'I only execute on the develop branch'
-        //         echo env.GIT_TAG_NAME
-        //     }
-
-        //     else {
-        //         echo 'I execute elsewhere'
-        //     }
-        // }
-        // stage('Checkout') {
-        //     container('jnlp') {
-        //         checkout scm
-        //     }
-        // }
-        
+                } else if (env.BRANCH_NAME == 'develop'){
+                    echo 'Develop Deploy'
+                    echo 'Image Used:' + DEVELOP_IMAGE_TAG
+                    sh 'helm --help'
+                } else if (env.BRANCH_NAME == 'release'){
+                    //Image was just rebuilt again.
+                    echo 'Release Deploy'
+                    echo 'Image Tag:' + RELEASE_IMAGE_TAG
+                    sh 'helm --help'
+                } else if (env.BRANCH_NAME.contains('prod') && COMMIT_HEAD_TAG.contains('prod')){
+                    echo 'Deploy on GitTag'
+                    echo 'Image Tag:' + COMMIT_HEAD_TAG
+                    sh 'helm --help'
+                else {
+                    echo 'No Deploy. Should we name feature, or leave open?'
+                    echo 'Head Tag:' + COMMIT_HEAD_TAG
+                    echo 'Branch Name:' + env.BRANCH_NAME
+                }
+            }
+        }
         
     }
 }
