--- a/jenkinsfile
+++ b/jenkinsfile
@@ -6,7 +6,9 @@ def COMMIT_HEAD_TAG = ""
 def APPLICATION_NAME = 'helpline'
 def DEVELOP_IMAGE_TAG = "test"
 def RELEASE_IMAGE_TAG = "release"
-def FULL_IMAGE_NAME = ""
+def FEATURE_IMAGE_TAG = "feature"
+def BUILD_IMAGE_NAME = ""
+def DEPLOY_IMAGE_NAME = ""
 def TAG_FILTER="prod"
 
 podTemplate(
@@ -111,29 +113,37 @@ podTemplate(
                     echo 'Build on Develop'
                     //Builds as :test or :develop
                     echo 'Image Tag:' + DEVELOP_IMAGE_TAG
-                    FULL_IMAGE_NAME = OS_PROJECT_NAME + '/' + APPLICATION_NAME + ':' + DEVELOP_IMAGE_TAG
-                    echo FULL_IMAGE_NAME
+                    BUILD_IMAGE_NAME = OS_PROJECT_NAME + '/' + APPLICATION_NAME + ':' + DEVELOP_IMAGE_TAG
+                    echo 'Full Image Name:' + BUILD_IMAGE_NAME
+
                     sh 'oc whoami'
+                    DEPLOY_IMAGE_NAME = BUILD_IMAGE_NAME
                 } else if (env.BRANCH_NAME == 'feature'){
                     echo 'Build on Feature'
                     //Builds as :feature or :stage
-                    echo 'Image Tag:' + RELEASE_IMAGE_TAG
-                    FULL_IMAGE_NAME = OS_PROJECT_NAME + '/' + APPLICATION_NAME + ':' + RELEASE_IMAGE_TAG
-                    echo FULL_IMAGE_NAME
+                    echo 'Image Tag:' + FEATURE_IMAGE_TAG
+                    BUILD_IMAGE_NAME = OS_PROJECT_NAME + '/' + APPLICATION_NAME + ':' + FEATURE_IMAGE_TAG
+                    echo 'Full Image Name: ' + BUILD_IMAGE_NAME
                     sh 'oc whoami'
+                    DEPLOY_IMAGE_NAME = BUILD_IMAGE_NAME
+
                 } else if (env.BRANCH_NAME.contains(TAG_FILTER) && COMMIT_HEAD_TAG.contains(TAG_FILTER)){
                     echo 'Build on Release'
                     //Builds as :gittag (e.g. COMMIT_HEAD_TAG)
-                    echo 'Image Tag:' + COMMIT_HEAD_TAG
-                    FULL_IMAGE_NAME = OS_PROJECT_NAME + '/' + APPLICATION_NAME + ':' + COMMIT_HEAD_TAG
-                    echo FULL_IMAGE_NAME
+                    echo 'Image Tag:' + RELEASE_IMAGE_TAG
+                    BUILD_IMAGE_NAME = OS_PROJECT_NAME + '/' + APPLICATION_NAME + ':' + RELEASE_IMAGE_TAG
+                    echo 'Full Image Name: ' + BUILD_IMAGE_NAME
                     sh 'oc whoami'
 
                     //Tag as :release also
-                    echo 'Tag Image as :release also'
+                    echo 'Tag Image as COMMIT_HEAD_TAG also'
+                    DEPLOY_IMAGE_NAME = OS_PROJECT_NAME + '/' + APPLICATION_NAME + ':' + COMMIT_HEAD_TAG
+                    echo 'Deploy Image Name (Different than Build): ' + DEPLOY_IMAGE_NAME 
+
+                    //If we want to "build" as GitTag, we'll need to create a new Build-Config each time, with that GitTag version. Not sure it makes difference. Future idea?
                 }
                 else {
-                    echo 'No Build. Should we name feature, or leave open?'
+                    echo 'No Build.'
                     echo 'Head Tag:' + COMMIT_HEAD_TAG
                     echo 'Branch Name:' + env.BRANCH_NAME
                 }
@@ -146,19 +156,20 @@ podTemplate(
 
                 } else if (env.BRANCH_NAME == 'develop'){
                     echo 'Develop Deploy'
-                    echo 'Image Used:' + DEVELOP_IMAGE_TAG
+                    //Deploy with :test
+                    echo 'Image Deployed With:' + DEPLOY_IMAGE_NAME
                     sh 'helm --help'
-                } else if (env.BRANCH_NAME == 'release'){
-                    //Image was just rebuilt again.
+                } else if (env.BRANCH_NAME == 'feature'){
+                    //Deploy with :feature
                     echo 'Release Deploy'
-                    echo 'Image Tag:' + RELEASE_IMAGE_TAG
+                    echo 'Image Deployed With:' + DEPLOY_IMAGE_NAME
                     sh 'helm --help'
                 } else if (env.BRANCH_NAME.contains(TAG_FILTER) && COMMIT_HEAD_TAG.contains(TAG_FILTER)){
-                    echo 'Deploy on GitTag'
-                    echo 'Image Tag:' + COMMIT_HEAD_TAG
+                    echo 'Deploy with GitTag'
+                    echo 'Image Deployed With:' + DEPLOY_IMAGE_NAME
                     sh 'helm --help'
                 } else {
-                    echo 'No Deploy. Should we name feature, or leave open?'
+                    echo 'No Deploy.'
                     echo 'Head Tag:' + COMMIT_HEAD_TAG
                     echo 'Branch Name:' + env.BRANCH_NAME
                 }
